[gd_scene load_steps=42 format=3 uid="uid://378kl0b07lmb"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_luw3v"]
[ext_resource type="Texture2D" uid="uid://5ow12i52hvse" path="res://assets/hud/lantern.png" id="2_odx47"]
[ext_resource type="Texture2D" uid="uid://6kbs62gcbunq" path="res://assets/hud/testSword4.png" id="3_lxa52"]
[ext_resource type="AudioStream" uid="uid://buci8voyiivpt" path="res://assets/audio/testLanternOn.mp3" id="3_ro1x1"]
[ext_resource type="AudioStream" uid="uid://2xetoeufvh53" path="res://assets/audio/footstep_concrete_a_15.mp3" id="4_0yryg"]
[ext_resource type="Script" path="res://scripts/HUD.gd" id="4_v5o7i"]
[ext_resource type="Script" path="res://scripts/KeyManager.gd" id="5_11h2x"]
[ext_resource type="PackedScene" uid="uid://6kfogt2jbret" path="res://scenes/UI/PauseMenu.tscn" id="6_gx2dt"]
[ext_resource type="FontFile" uid="uid://dm1awoklwrgu7" path="res://assets/fonts/Kenney High Square.ttf" id="6_m37cq"]
[ext_resource type="AudioStream" uid="uid://bb8dbfw03ki4b" path="res://assets/audio/testSwing.mp3" id="8_cegbu"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_amreb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4qoa5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nnslc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_425ww"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m46tf"]
size = Vector3(2.55371, 1.72504, 1)

[sub_resource type="Animation" id="Animation_xvrh8"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Items/Sword/SwordMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.25, -0.254, -0.634)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Items/Sword/SwordMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.91986, 0.322886, -1.40499)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Items/Sword:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-7.32934e-10, 2.07317, -1.00254e-09)]
}

[sub_resource type="Animation" id="Animation_7bbi8"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Items/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Items/Sword/SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.331626, -0.123581, -0.634406), Vector3(0.331626, -0.200642, -0.634406)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Items/Sword/SwordMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.3484, -0.0129253, 0.0378445), Vector3(-0.345856, -0.0448018, 0.131483)]
}

[sub_resource type="Animation" id="Animation_wrn5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Items/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Items/Sword/SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.331626, -0.123581, -0.634406)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Items/Sword/SwordMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.348575, -0.00631174, 0.0184774)]
}

[sub_resource type="Animation" id="Animation_voost"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Items/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.331613, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Items/Sword/SwordMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector3(0.331626, -0.123581, -0.634406)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Items/Sword/SwordMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector3(-0.3484, -0.0129253, 0.0378445)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulxyo"]
_data = {
"Attack": SubResource("Animation_xvrh8"),
"Idle": SubResource("Animation_7bbi8"),
"RESET": SubResource("Animation_wrn5s"),
"Walk": SubResource("Animation_voost")
}

[sub_resource type="Animation" id="Animation_oerdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Items/Lantern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.240382, -0.429587)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Items/Lantern:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(4.4409e-16, 0, 8.94465e-19)]
}

[sub_resource type="Animation" id="Animation_db6ma"]
resource_name = "idleUp"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Items/Lantern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.240382, -0.429587), Vector3(0, -0.32, -0.43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Items/Lantern:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(4.4409e-16, 0, 8.94465e-19), Vector3(0, 0, -0.0349066)]
}

[sub_resource type="Animation" id="Animation_kfs0p"]
resource_name = "switch"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Items/Lantern:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.25, -0.43), Vector3(0, -0.240382, -0.429587)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Items/Lantern:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Items/Lantern:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(4.4409e-16, 0, 8.94465e-19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3gxmy"]
_data = {
"RESET": SubResource("Animation_oerdv"),
"idleUp": SubResource("Animation_db6ma"),
"switch": SubResource("Animation_kfs0p")
}

[sub_resource type="Animation" id="Animation_fo0u7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.240095, 0)]
}

[sub_resource type="Animation" id="Animation_bk0lt"]
resource_name = "bob"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.240095, 0), Vector3(0, 0.12, 0), Vector3(0, 0.240095, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"playFootStep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rg8vv"]
_data = {
"RESET": SubResource("Animation_fo0u7"),
"bob": SubResource("Animation_bk0lt")
}

[sub_resource type="Animation" id="Animation_446od"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_larmo"]
resource_name = "idle"
length = 2.0

[sub_resource type="Animation" id="Animation_c18nt"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8rivj"]
_data = {
"attack": SubResource("Animation_446od"),
"idle": SubResource("Animation_larmo"),
"walk": SubResource("Animation_c18nt")
}

[sub_resource type="Animation" id="Animation_8n8vf"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_g1gm4"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_pejwg"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l7i8k"]
_data = {
"attack": SubResource("Animation_8n8vf"),
"idle": SubResource("Animation_g1gm4"),
"walk": SubResource("Animation_pejwg")
}

[sub_resource type="LabelSettings" id="LabelSettings_4xiw0"]
font = ExtResource("6_m37cq")
font_size = 20
shadow_size = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xpvym"]

[sub_resource type="Animation" id="Animation_8b3am"]
resource_name = "dmg"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 0.141176), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_myqff"]
resource_name = "hlt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Damage:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(0, 1, 0, 0.141176), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j5g2i"]
_data = {
"dmg": SubResource("Animation_8b3am"),
"hlt": SubResource("Animation_myqff")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t3k7p"]

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_luw3v")

[node name="TempPlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_amreb")

[node name="TempPlayerCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_4qoa5")

[node name="Hitbox" type="Area3D" parent="." groups=["player"]]

[node name="hitBoxCollision" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CapsuleShape3D_4qoa5")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(0.999997, -0.00171673, -0.00185316, 0.00172182, 0.999995, 0.00274956, 0.00184844, -0.00275274, 0.999995, 0, 0.240095, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 1.78488e-09, -1.05938e-08, -1.09139e-10, 1, -1.39698e-09, -1.16415e-10, 0, 1, 0.001, 0.29, 0.001)
cull_mask = 1048573

[node name="Items" type="Node3D" parent="Head"]
transform = Transform3D(0.999997, 0.00172182, 0.00184843, -0.00171673, 0.999995, -0.00275274, -0.00185317, 0.00274956, 0.999995, 0, 0, 0)

[node name="Lantern" type="OmniLight3D" parent="Head/Items"]
transform = Transform3D(1, -8.94465e-19, 0, 8.94465e-19, 1, -4.4409e-16, 3.97223e-34, 4.4409e-16, 0.999999, 0, -0.240382, -0.429587)
light_color = Color(1, 0.8, 0.619608, 1)
light_energy = 0.0
light_indirect_energy = 3.0
omni_range = 10.0

[node name="LightHitbox" type="Area3D" parent="Head/Items/Lantern" groups=["Light"]]
transform = Transform3D(5, -4.87891e-18, 0, -4.87891e-18, 5, 0, 0, 0, 5, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Items/Lantern/LightHitbox"]
transform = Transform3D(1, -2.2302e-16, -2.77556e-17, -9.75781e-19, 1, 0, 2.77556e-17, 0, 1, 0, 0, 0)
shape = SubResource("SphereShape3D_nnslc")
disabled = true

[node name="OuterLightHitbox" type="Area3D" parent="Head/Items/Lantern" groups=["EdgeLight"]]
monitoring = false

[node name="OuterLightCollision" type="CollisionShape3D" parent="Head/Items/Lantern/OuterLightHitbox"]
transform = Transform3D(5.5, -5.3668e-18, -2.22045e-16, -5.3668e-18, 5.5, 0, 2.22045e-16, 0, 5.5, 0, 0, 0)
shape = SubResource("SphereShape3D_425ww")
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="Head/Items/Lantern"]
transform = Transform3D(1, 1.08531e-10, -3.70995e-10, -3.17892e-11, 0.979614, 0.20089, 3.85234e-10, -0.20089, 0.979614, -0.6, 0, -0.4)
layers = 3
texture = ExtResource("2_odx47")

[node name="LanternOn" type="AudioStreamPlayer3D" parent="Head/Items/Lantern"]
stream = ExtResource("3_ro1x1")

[node name="Sword" type="Node3D" parent="Head/Items"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.77556e-17, 0.1, 5.55112e-17)

[node name="SwordMesh" type="MeshInstance3D" parent="Head/Items/Sword"]
transform = Transform3D(0.0999849, -0.0163205, -0.000593212, 0.00173652, 0.939699, 0.0341559, -1.49012e-09, -0.34161, 0.0939842, 0.331626, -0.123581, -0.634406)

[node name="SwordHitbox" type="Area3D" parent="Head/Items/Sword/SwordMesh" groups=["sword"]]
transform = Transform3D(1, 1.74622e-10, 2.79397e-09, -1.74623e-10, 1, 4.76837e-07, -2.79397e-09, -4.76837e-07, 1, 0, 0, 0)
monitoring = false

[node name="Sprite3D" type="Sprite3D" parent="Head/Items/Sword/SwordMesh/SwordHitbox"]
transform = Transform3D(7.93516, 0, 1.27065, 7.45058e-08, 0.8, -6.4671e-06, -1.01652, 7.15256e-07, 9.91894, -0.846523, -0.0258585, 0.754461)
offset = Vector2(0, 37)
texture = ExtResource("3_lxa52")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Items/Sword/SwordMesh/SwordHitbox"]
transform = Transform3D(1, -1.3113e-05, 9.83477e-07, -5.58794e-08, 1, -5.58794e-07, 8.9407e-08, -4.64916e-06, 1, -0.776857, 0.38515, 1.19209e-06)
shape = SubResource("BoxShape3D_m46tf")
disabled = true

[node name="HealthPot" type="Node3D" parent="Head/Items"]

[node name="Sprite3D" type="Sprite3D" parent="Head/Items/HealthPot"]

[node name="Axe" type="Node3D" parent="Head/Items"]

[node name="Dagger" type="Node3D" parent="Head/Items"]

[node name="SwordAnimation" type="AnimationPlayer" parent="Head"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ulxyo")
}
playback_default_blend_time = 0.1

[node name="LanternAnimation" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_3gxmy")
}

[node name="Headbob" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_rg8vv")
}

[node name="AxeAnim" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_8rivj")
}

[node name="DaggerAnim" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_l7i8k")
}

[node name="Footstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_0yryg")
max_db = 1.0

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 180.0
script = ExtResource("4_v5o7i")

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
visible = false
layout_mode = 0
offset_top = 153.0
offset_right = 40.0
offset_bottom = 180.0
value = 100.0

[node name="itemManager" type="Control" parent="HUD"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="KeyRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 180.0
offset_right = 220.0
offset_bottom = 40.0

[node name="HeartRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0

[node name="FuelRect" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 222.0
offset_right = 240.0
offset_bottom = 51.0

[node name="Label" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 70.0
offset_top = 140.0
offset_right = 170.0
offset_bottom = 180.0
text = "Open Door"
label_settings = SubResource("LabelSettings_4xiw0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area3D" type="Area3D" parent="HUD"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HUD/Area3D"]
shape = SubResource("CapsuleShape3D_xpvym")

[node name="Damage" type="ColorRect" parent="HUD"]
layout_mode = 0
offset_right = 240.0
offset_bottom = 180.0
color = Color(1, 0, 0, 0)

[node name="DamageAnim" type="AnimationPlayer" parent="HUD"]
libraries = {
"": SubResource("AnimationLibrary_j5g2i")
}

[node name="HitTimer" type="Timer" parent="."]

[node name="KeyManager" type="Node3D" parent="."]
script = ExtResource("5_11h2x")

[node name="KeyArea" type="Area3D" parent="KeyManager" groups=["noneInt"]]

[node name="KeyCol" type="CollisionShape3D" parent="KeyManager/KeyArea"]
shape = SubResource("CapsuleShape3D_t3k7p")

[node name="PauseMenu" parent="." instance=ExtResource("6_gx2dt")]
visible = false

[node name="LavaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="fuelTimer" type="Timer" parent="."]

[node name="Swing" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_cegbu")
max_db = 1.0
emission_angle_enabled = true

[connection signal="damage" from="." to="HUD" method="_on_player_damage"]
[connection signal="pause" from="." to="PauseMenu" method="_on_player_pause"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="HUD" method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="area_exited" from="Hitbox" to="HUD" method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="Head/Items/Lantern/LightHitbox" to="." method="_on_light_hitbox_body_entered"]
[connection signal="body_exited" from="Head/Items/Lantern/LightHitbox" to="." method="_on_light_hitbox_body_exited"]
[connection signal="body_entered" from="Head/Items/Lantern/OuterLightHitbox" to="." method="_on_outer_light_hitbox_body_entered"]
[connection signal="body_exited" from="Head/Items/Lantern/OuterLightHitbox" to="." method="_on_outer_light_hitbox_body_exited"]
[connection signal="area_entered" from="Head/Items/Sword/SwordMesh/SwordHitbox" to="." method="_on_sword_hitbox_area_entered"]
[connection signal="animation_finished" from="Head/SwordAnimation" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="Head/SwordAnimation" to="." method="_on_animation_player_animation_started"]
[connection signal="animation_finished" from="Head/LanternAnimation" to="." method="_on_lantern_animation_animation_finished"]
[connection signal="area_entered" from="HUD/Area3D" to="HUD" method="_on_area_3d_area_entered"]
[connection signal="area_entered" from="KeyManager/KeyArea" to="." method="_on_key_area_area_entered"]
[connection signal="area_entered" from="KeyManager/KeyArea" to="KeyManager" method="_on_key_area_area_entered"]
[connection signal="timeout" from="LavaTimer" to="." method="_on_lava_timer_timeout"]
[connection signal="timeout" from="fuelTimer" to="." method="_on_fuel_timer_timeout"]
